--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "generate": "node ./scripts/generateDockerCompose.js",
     "start": "docker-compose up -d && docker ps",
     "stop": "docker-compose stop && docker ps",
     "forceKill": "docker kill $(docker ps) && docker ps",
