--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "docker-compose up -d && docker ps",
     "stop": "docker-compose stop && docker ps",
     "genStart": "npm run generate && npm run start",
-    "fullRestart": "npm run dockerSystemPrune && npm run genStart",
+    "fullRestart": "npm run stop && npm run dockerSystemPrune && npm run genStart",
     "forceKill": "docker kill $(docker ps) && docker ps",
     "dockerSystemPrune": "docker system prune -a"
   },
