--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "service:generate": "node ./scripts/generateDockerCompose.js",
     "service:start": "docker-compose up -d",
-    "service:forceKill": "docker-compose stop && docker container kill $(docker ps -a -q) && docker container kill $(docker ps -q)",
+    "service:forceKill": "docker-compose stop || docker container kill $(docker ps -a -q) || docker container kill $(docker ps -q)",
     "service:genStart": "npm run service:generate && npm run service:start",
 
     "fullRestart": "npm run service:forceKill || npm run service:genStart",
