--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "service:generate": "node ./scripts/generateDockerCompose.js",
+    "service:generate": "node --experimental-modules ./scripts/generateDockerCompose.js",
     "service:start": "docker-compose up -d",
     "service:forceKill": "docker-compose stop || docker container kill $(docker ps -a -q) || docker container kill $(docker ps -q)",
     "service:genStart": "npm run service:generate && npm run service:start",
